--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,8 +7,12 @@
   padding: 0;
 }
 
+input[type='search']::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+}
+
 a {
-  @apply my-6 text-blue-600;
+  @apply my-6 text-blue-600 dark:text-blue-300;
 }
 
 p {
